--- a/WpfPlayground/View/MainView.xaml
+++ b/WpfPlayground/View/MainView.xaml
@@ -20,13 +20,16 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <TextBlock Name="HelloWPF" Grid.Row="0" Text="Hello WPF!" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <dex:TextEdit x:Name="devTextBlock" Grid.Row="1" EditValue="{Binding UserName, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"  Width="200" FontSize="14"/>
         <dex:TextEdit x:Name="subTextBlock" Grid.Row="2" EditValue="{Binding Source={StaticResource ResourceKey=SubVM}, Path=Address, UpdateSourceTrigger=PropertyChanged}" Width="200" FontSize="14"/>
         <local:VisibilityConvertView Grid.Row="3"/>
         <local:StringMulltiConverterView Grid.Row="4"/>
-
+        <local:DataTempView Grid.Row ="5"/>
+        <local:SelectorView Grid.Row ="6"/>
     </Grid>
         
 </UserControl>
